--- a/publications.qmd
+++ b/publications.qmd
@@ -32,7 +32,7 @@ title: "Publications"
 
 15. **Li, K.**, I. Grass, D. C. Zemp, H. Lorenz, L. Sachsenmaier, F. Nurdiansyah, D. Hölscher, H. Kreft, and T. Tscharntke. 2023. Tree identity and canopy openness mediate oil palm biodiversity enrichment effects on insect herbivory and pollination. *Ecological Applications* 33:e2862.
 
-16. Zemp, D. C., N. R. Guerrero-Ramírez, F. Brambach, K. Darras, I. Grass, A. Potapov, A. Röll, I. Arimond, J. Ballauff, B. Hermann, D. Berkelmann, S. Biagioni, D. Buchori, D. Craven, R. Daniel, O. Gailing, F. Ellsäßer, R. Fardiansah, N. Hennings, B. Irawan, W. Khokthong, V. Krashevska, A. Krause, J. Kückes, **K. Li**, H. Lorenz, M. Maraun, M. Merk, C. C. d. M. Moura, Y. Mulyani, G. P. H. Pebrianti, A. Polle, D. A. Prameswari, L. Sachsenmaier, S. Scheu, D. Schneider, S. Fitta, C. Setyaningsih, L. Sundawati, T. Tscharntke, M. Wollni, D. Hölscher, and H. Kreft. 2023. Tree islands enhance biodiversity and functioning in oil palm landscapes. *Nature*.
+16. Zemp, D. C., N. R. Guerrero-Ramírez, F. Brambach, K. Darras, I. Grass, A. Potapov, A. Röll, I. Arimond, J. Ballauff, B. Hermann, D. Berkelmann, S. Biagioni, D. Buchori, D. Craven, R. Daniel, O. Gailing, F. Ellsäßer, R. Fardiansah, N. Hennings, B. Irawan, W. Khokthong, V. Krashevska, A. Krause, J. Kückes, **K. Li**, H. Lorenz, M. Maraun, M. Merk, C. C. d. M. Moura, Y. Mulyani, G. P. H. Pebrianti, A. Polle, D. A. Prameswari, L. Sachsenmaier, S. Scheu, D. Schneider, F. Setianjiati, C. Setyaningsih, L. Sundawati, T. Tscharntke, M. Wollni, D. Hölscher, and H. Kreft. 2023. Tree islands enhance biodiversity and functioning in oil palm landscapes. *Nature*.
 
 17. Perfecto, I., L. F. Chaves, G. M. Fitch, Z. Hajian-Forooshani, B. Iuliano, **K. Li**, N. Medina, J. Morris, B. O. Jiménez, I. S. Rivera-Salinas, C. Su, J. Vandermeer, A. White, and K. Williams-Guillén. 2023. Looking beyond land-use and land-cover change: Zoonoses emerge in the agricultural matrix. O*ne Earth* 6:1131–1142.
 
